fix(styles): remove text align center from games inventory card

--- a/src/styles/scss/components/projects/_gamesinventory.scss
+++ b/src/styles/scss/components/projects/_gamesinventory.scss
@@ -1,7 +1,6 @@
 .games-inventory-card {
   background: #000000;
   color: white;
-  text-align: center;
   padding: $spacing-08;
   // max-width: 920px;
   
